--- a/app/globals.css
+++ b/app/globals.css
@@ -85,8 +85,8 @@ body {
 	background-color: #2c3538;
 }
 .search_img{
-	width: 50px;
-	height: 50px;
+	width: 50px !important;
+	height: 50px !important;
 	object-fit: cover;
 }
 /* LIST */
